[project]
name = "hh-neuron"
version = "0.1.0"
description = "HH model neuron with OO synaptic input"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.4.0",
    "marimo>=0.16.5",
    "matplotlib>=3.10.6",
    "mcp>=1",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars[pyarrow]>=1.34.0",
    "pydantic>=2",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.13.3",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlglot>=27.20.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]
